--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "sha_project",
+  "author": "Shahinsha",
+  "licence": "MIT",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx ./src",
+    "lint:fix": "eslint --fix --ext .js,.jsx ./src",
+    "pre-steps": "pip install flask-cors"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
     ]
   },
   "browserslist": {
@@ -34,5 +30,43 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@faker-js/faker": "^6.0.0-alpha.7",
+    "@iconify/react": "^3.1.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.69",
+    "@mui/material": "^5.6.0",
+    "@mui/utils": "^5.4.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "apexcharts": "^3.33.1",
+    "change-case": "^4.1.2",
+    "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.2.6",
+    "history": "^5.2.0",
+    "lodash": "^4.17.21",
+    "node-esapi": "0.0.1",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.8.1",
+    "react-apexcharts": "^1.3.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.2.3",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "redux": "^4.1.1",
+    "simplebar": "^5.3.6",
+    "simplebar-react": "^2.3.6",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.5"
   }
 }
