--- a/package.json
+++ b/package.json
@@ -53,13 +53,14 @@
     "node-esapi": "0.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
-    "react-apexcharts": "^1.3.9",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.2.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-virtuoso": "^4.1.0",
     "redux": "^4.1.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
