--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.jsx ./src",
     "lint:fix": "eslint --fix --ext .js,.jsx ./src",
     "pre-steps": "pip install flask-cors",
-    "liveUpdate": "npm run build && firebase deploy"
+    "liveUpdate": "npm run build && firebase deploy",
+    "pushAndUpdate" : "git commit -m 'changes' && git push && npm run liveUpdate"
   },
   "babel": {
     "presets": [
