--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "eslint --fix --ext .js,.jsx ./src",
     "pre-steps": "pip install flask-cors",
     "liveUpdate": "npm run build && firebase deploy",
-    "pushAndUpdate" : "git commit -m 'changes' && git push && npm run liveUpdate"
+    "pushAndUpdate": "git commit -m 'changes' && git push && npm run liveUpdate"
   },
   "babel": {
     "presets": [
@@ -34,8 +34,6 @@
     ]
   },
   "dependencies": {
-    "@zohodesk/components": "1.0.0-alpha-256",
-    "@zohodesk/dot": "1.0.0-beta.245",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.0.0-alpha.7",
@@ -46,10 +44,19 @@
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.6.0",
     "@mui/utils": "^5.4.2",
+    "@mui/x-date-pickers": "^5.0.20",
     "@testing-library/jest-dom": "^5.16.2",
+    "@zohodesk/a11y": "^1.3.11",
+    "@zohodesk/components": "1.0.0-alpha-256",
+    "@zohodesk/datetimejs": "^1.0.0-beta.8",
+    "@zohodesk/dot": "^1.0.0-beta.250",
+    "@zohodesk/icons": "1.0.0-beta.116",
+    "@zohodesk/svg": "1.0.0-beta.52",
+    "@zohodesk/virtualizer": "1.0.13",
     "apexcharts": "^3.33.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "history": "^5.2.0",
