--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.7",
+    "firebase-tools": "^13.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "history": "^5.2.0",
@@ -71,13 +72,13 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-virtualized": "^9.22.5",
     "react-virtuoso": "^4.1.0",
     "redux": "^4.1.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "react-virtualized": "^9.22.5"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5"
