--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - '*'
 jobs:
   build:
     name: Build
@@ -38,4 +41,4 @@ jobs:
         with:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SSPROJECT_376507 }}"
           projectId: ssproject-376507
-          channelId: live
+          channelId: ${{ github.ref == 'refs/heads/master' && 'live' || github.head_ref || github.ref_name }}
