--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,10 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SSPROJECT_376507 }}"
           projectId: ssproject-376507
           channelId: ${{ github.ref == 'refs/heads/master' && 'live' || github.head_ref || github.ref_name }}
+        env:
+          DEBUG: firebase*
+      - name: List Firebase Hosting Channels
+        run: |
+          firebase hosting:channel:list --project ssproject-376507 --json | jq -r '.channels[] | select(.id == "'${{ github.ref_name }}'") | .url'
+        env:
+         FIREBASE_TOKEN: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SSPROJECT_376507 }}"
